--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["jest", "node", "@types/testing-library__jest-dom", "@types/jest"],
+    "typeRoots": ["node_modules/@types"],
   },
   "include": [
     "src"
