--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,9 @@
-yarnPath: .yarn/releases/yarn-3.1.0.cjs
 nodeLinker: pnpm
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-compat.cjs
+    spec: "@yarnpkg/plugin-compat"
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
+
+yarnPath: .yarn/releases/yarn-3.1.0.cjs
