--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "ts-patch": "^1.4.4",
+    "ts-auto-mock": "^3.5.0",
     "typescript": "4.4.2",
+    "typescript-is": "^0.19.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -16,6 +17,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
     "@babel/plugin-syntax-flow": "^7.16.0",
     "@babel/plugin-transform-react-jsx": "^7.16.0",
+    "@babel/runtime": "^7.16.7",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -28,15 +30,22 @@
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "babel-eslint": "^10.1.0",
+    "browserslist": "^4.19.1",
     "eslint": "^7.30.0",
-    "eslint-config-react-app": "7.0.0-next.91",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.2.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-testing-library": "^5.0.0"
+    "eslint-plugin-testing-library": "^5.0.0",
+    "postcss": "^8.4.5",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^7.2.2",
+    "ts-patch": "^1.4.4",
+    "util": "^0.12.4"
   },
   "scripts": {
     "start": "react-scripts start",
