--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,14 @@
     "jsx": "react-jsx",
     "types": ["jest", "node", "@types/testing-library__jest-dom", "@types/jest"],
     "typeRoots": ["node_modules/@types"],
+    "plugins": [
+      { "transform": "typescript-is/lib/transform-inline/transformer" },
+      {
+        "transform": "ts-auto-mock/transformer",
+        "cacheBetweenTests": false,
+        "features": ["random"]
+      }
+    ]
   },
   "include": [
     "src"
